# ai-for-bharat-healthcare

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  design.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  requirements.md
ai_services/: diet_chart.py  main.py  prakriti.py  pyproject.toml  requirements.txt
ai_services/graph/: chat.py  prakriti.py
ai_services/models/: schemas.py
backend/: build.ts  drizzle.config.ts  package-lock.json  package.json  schema.ts  start.sh  tsconfig.json
backend/src/: ai-service.ts  db.ts  index.ts  routes.ts  seed.ts  storage.ts
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: app-sidebar.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/pages/: assessment.tsx  chat.tsx  dashboard.tsx  diet-chart-detail.tsx  diet-charts.tsx  foods.tsx  generate-diet.tsx  patient-detail.tsx  patients.tsx
frontend/src/types/: schema.ts
scripts/: setup.ps1  setup.sh
